###########
# headers #
###########

if not meson.is_subproject()
  install_headers(
    files([
      'pbbam/Accuracy.h',
      'pbbam/AlignmentPrinter.h',
      'pbbam/BaiIndexedBamReader.h',
      'pbbam/BamFile.h',
      'pbbam/BamHeader.h',
      'pbbam/BamReader.h',
      'pbbam/BamRecord.h',
      'pbbam/BamRecordBuilder.h',
      'pbbam/BamRecordImpl.h',
      'pbbam/BamRecordTag.h',
      'pbbam/BamRecordView.h',
      'pbbam/BamTagCodec.h',
      'pbbam/BamWriter.h',
      'pbbam/BarcodeQuery.h',
      'pbbam/Cigar.h',
      'pbbam/CigarOperation.h',
      'pbbam/ClipType.h',
      'pbbam/Compare.h',
      'pbbam/CompositeBamReader.h',
      'pbbam/CompositeFastaReader.h',
      'pbbam/Config.h',
      'pbbam/DataSet.h',
      'pbbam/DataSetTypes.h',
      'pbbam/DataSetXsd.h',
      'pbbam/EntireFileQuery.h',
      'pbbam/FastaReader.h',
      'pbbam/FastaSequence.h',
      'pbbam/FastaSequenceQuery.h',
      'pbbam/FastqReader.h',
      'pbbam/FastqSequence.h',
      'pbbam/FrameEncodingType.h',
      'pbbam/Frames.h',
      'pbbam/GenomicInterval.h',
      'pbbam/GenomicIntervalQuery.h',
      'pbbam/IndexedBamWriter.h',
      'pbbam/IndexedFastaReader.h',
      'pbbam/Interval.h',
      'pbbam/IRecordWriter.h',
      'pbbam/LocalContextFlags.h',
      'pbbam/MakeUnique.h',
      'pbbam/MD5.h',
      'pbbam/MoveAppend.h',
      'pbbam/Orientation.h',
      'pbbam/PbiBasicTypes.h',
      'pbbam/PbiBuilder.h',
      'pbbam/PbiFile.h',
      'pbbam/PbiFilter.h',
      'pbbam/PbiFilterQuery.h',
      'pbbam/PbiFilterTypes.h',
      'pbbam/PbiIndexedBamReader.h',
      'pbbam/PbiRawData.h',
      'pbbam/Position.h',
      'pbbam/ProgramInfo.h',
      'pbbam/PulseBehavior.h',
      'pbbam/PulseExclusionReason.h',
      'pbbam/QNameQuery.h',
      'pbbam/QualityValue.h',
      'pbbam/QualityValues.h',
      'pbbam/ReadAccuracyQuery.h',
      'pbbam/ReadGroupInfo.h',
      'pbbam/RecordType.h',
      'pbbam/SamTagCodec.h',
      'pbbam/SamWriter.h',
      'pbbam/SequenceInfo.h',
      'pbbam/Strand.h',
      'pbbam/StringUtilities.h',
      'pbbam/SubreadLengthQuery.h',
      'pbbam/Tag.h',
      'pbbam/TagCollection.h',
      'pbbam/Unused.h',
      'pbbam/Validator.h',
      'pbbam/ZmwGroupQuery.h',
      'pbbam/ZmwQuery.h',
      'pbbam/ZmwType.h',
      'pbbam/ZmwTypeMap.h']),
    subdir : 'pbbam')

  install_headers(
    files([
      'pbbam/exception/BundleChemistryMappingException.h',
      'pbbam/exception/InvalidSequencingChemistryException.h',
      'pbbam/exception/ValidationException.h']),
    subdir : 'pbbam/exception')

  install_headers(
    files([
      'pbbam/internal/Accuracy.inl',
      'pbbam/internal/BamHeader.inl',
      'pbbam/internal/BamRecord.inl',
      'pbbam/internal/BamRecordBuilder.inl',
      'pbbam/internal/BamRecordImpl.inl',
      'pbbam/internal/BamRecordView.inl',
      'pbbam/internal/Cigar.inl',
      'pbbam/internal/CigarOperation.inl',
      'pbbam/internal/Compare.inl',
      'pbbam/internal/CompositeBamReader.inl',
      'pbbam/internal/CompositeFastaReader.inl',
      'pbbam/internal/DataSet.inl',
      'pbbam/internal/DataSetBaseTypes.h',
      'pbbam/internal/DataSetBaseTypes.inl',
      'pbbam/internal/DataSetElement.h',
      'pbbam/internal/DataSetElement.inl',
      'pbbam/internal/DataSetListElement.h',
      'pbbam/internal/DataSetListElement.inl',
      'pbbam/internal/DataSetTypes.inl',
      'pbbam/internal/FastaSequence.inl',
      'pbbam/internal/FastqSequence.inl',
      'pbbam/internal/Frames.inl',
      'pbbam/internal/GenomicInterval.inl',
      'pbbam/internal/Interval.inl',
      'pbbam/internal/PbiBasicTypes.inl',
      'pbbam/internal/PbiFilter.inl',
      'pbbam/internal/PbiFilterTypes.inl',
      'pbbam/internal/PbiRawData.inl',
      'pbbam/internal/ProgramInfo.inl',
      'pbbam/internal/QualityValue.inl',
      'pbbam/internal/QualityValues.inl',
      'pbbam/internal/QueryBase.h',
      'pbbam/internal/QueryBase.inl',
      'pbbam/internal/ReadGroupInfo.inl',
      'pbbam/internal/SequenceInfo.inl',
      'pbbam/internal/Tag.inl',
      'pbbam/internal/Validator.inl']),
    subdir : 'pbbam/internal')

  install_headers(
    files([
      'pbbam/vcf/VcfVariant.h',
      'pbbam/vcf/VcfFile.h',
      'pbbam/vcf/VcfFormat.h',
      'pbbam/vcf/VcfHeader.h',
      'pbbam/vcf/VcfHeaderTypes.h',
      'pbbam/vcf/VcfReader.h',
      'pbbam/vcf/VcfSort.h',
      'pbbam/vcf/VcfQuery.h',
      'pbbam/vcf/VcfWriter.h']),
    subdir : 'pbbam/vcf')

  install_headers(
    files([
      'pbbam/vcf/internal/VcfVariant.inl',
      'pbbam/vcf/internal/VcfFile.inl',
      'pbbam/vcf/internal/VcfHeader.inl',
      'pbbam/vcf/internal/VcfHeaderTypes.inl']),
    subdir : 'pbbam/vcf/internal')

  install_headers(
    files([
      'pbbam/virtual/VirtualPolymeraseBamRecord.h',
      'pbbam/virtual/VirtualPolymeraseCompositeReader.h',
      'pbbam/virtual/VirtualPolymeraseReader.h',
      'pbbam/virtual/VirtualRegion.h',
      'pbbam/virtual/VirtualRegionType.h',
      'pbbam/virtual/VirtualRegionTypeMap.h',
      'pbbam/virtual/VirtualZmwBamRecord.h',
      'pbbam/virtual/WhitelistedZmwReadStitcher.h',
      'pbbam/virtual/ZmwReadStitcher.h',
      'pbbam/virtual/ZmwWhitelistVirtualReader.h']),
    subdir : 'pbbam/virtual')
endif

pbbam_include_directories = include_directories('.')
